@@ -14,6 +14,7 @@
   enable secondary group checking when evaluating queue acl_group attribute
     - enable the new queue parameter "acl_group_sloppy"
   sol10 build system fixes (USC)
+  fixed node manager buffer overflow (UMU)
   fix "pbs_version" server attribute (USC)
   torque.spec updates (USC)
 
